# ModSync

./: .gitignore  Corter-ModSync.sln  README.md
ModSync/: Migrator.cs  ModSync.csproj  Plugin.cs  Server.cs  Sync.cs
ModSync.HashTester/: ModSync.HashTester.csproj  Program.cs
ModSync.MetroHash/: Cargo.toml  README.md
ModSync.MetroHash/src/: lib.rs
ModSync.Server/: biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
ModSync.Server/scripts/: build.cjs  bump-version.cjs  hashFile.ts
ModSync.Server/src/: config.ts  mod.ts  router.ts  sync.ts
ModSync.Server/src/utility/: imoHash.ts  metroHash.ts  semaphore.ts
ModSync.Server/tests/: config.test.ts  router.test.ts  sync.test.ts  utility.test.ts
ModSync.Server/tests/__snapshots__/: config.test.ts.snap  router.test.ts.snap  sync.test.ts.snap
ModSync.Tests/: IntegrationTests.cs  MigratorTests.cs  ModSync.Tests.csproj  SyncTests.cs  TestUtils.cs
ModSync.Tests/IntegrationTests/ClientNoSync/local/ModSync_Data/: Exclusions.json
ModSync.Tests/IntegrationTests/EnforcedBypassesLocalExclusions/local/ModSync_Data/: Exclusions.json
ModSync.Tests/Properties/: AssemblyInfo.cs
ModSync.Updater/: ModSync.Updater.csproj
ModSync.Utility/: Glob.cs  ImoHash.cs  MetroHash.cs  ModFile.cs  ModSync.Utility.projitems  SyncPath.cs
ModSync/Properties/: AssemblyInfo.cs
ModSync/UI/: AlertWindow.cs  UpdateWindow.cs
pkg/: metrohash_bg.wasm
