[package]
name = "modsync_metro_hash"
version = "0.10.2"
authors = ["corter <5890013+c-orter@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.84"
metrohash = "1.0.6"
js-sys = "0.3.72"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
panic = "abort"
codegen-units = 1
strip = true
opt-level = "z"
lto = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(wasm_bindgen_unstable_test_coverage)',
] }

# Build with `wasm-pack build --release --target no-modules --no-pack --manifest-path Cargo.toml -Z build-std=panic_abort,std -Z build-std-features=panic_immediate_abort`
